--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,10 +20,10 @@
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="horizontal"
+        android:paddingBottom="@dimen/margines_main"
         android:paddingLeft="@dimen/margines_main"
         android:paddingRight="@dimen/margines_main"
-        android:paddingTop="@dimen/margines_main"
-        android:paddingBottom="@dimen/margines_main">
+        android:paddingTop="@dimen/margines_main">
 
         <TextView
             android:id="@+id/all_songs"
@@ -33,12 +33,18 @@
             android:gravity="center_horizontal"
             android:text="@string/all_songs"
             android:textColor="@color/redText"
-            android:textStyle="bold"
-            android:textSize="20dp"/>
+            android:textSize="@dimen/text_size_activities_title"
+            android:textStyle="bold" />
 
         <View
-            android:layout_width="1dp"
+            android:layout_width="@dimen/thickness_lines"
             android:layout_height="match_parent"
+            android:background="@color/yellowLines" />
+
+        <View
+            android:layout_width="@dimen/thickness_lines"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margines_between_lines"
             android:background="@color/yellowLines" />
 
         <TextView
@@ -47,23 +53,63 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
+            android:onClick="goToFavoriteActivity"
             android:text="@string/favorite"
             android:textColor="@color/redText"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:onClick="goToFavoriteActivity"/>
+            android:textSize="@dimen/text_size_activities_title"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/yellowLines" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/margines_main"
+        android:layout_marginRight="@dimen/margines_main">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/yellowLines" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_marginRight="@dimen/margines_main">
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/thickness_lines"
+            android:background="@color/yellowLines" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/thickness_lines"
+            android:background="@color/yellowLines"
+            android:layout_marginTop="@dimen/margines_between_lines"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_marginLeft="@dimen/margines_main">
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/thickness_lines"
+                android:background="@color/yellowLines" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/thickness_lines"
+                android:background="@color/yellowLines"
+                android:layout_marginTop="@dimen/margines_between_lines"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -71,10 +117,10 @@
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="horizontal"
+        android:paddingBottom="@dimen/margines_main"
         android:paddingLeft="@dimen/margines_main"
         android:paddingRight="@dimen/margines_main"
-        android:paddingTop="@dimen/margines_main"
-        android:paddingBottom="@dimen/margines_main">
+        android:paddingTop="@dimen/margines_main">
 
         <TextView
             android:id="@+id/music_bands_singers"
@@ -84,8 +130,19 @@
             android:gravity="center_horizontal"
             android:text="@string/music_bands_singers"
             android:textColor="@color/redText"
-            android:textStyle="bold"
-            android:textSize="20dp"/>
+            android:textSize="@dimen/text_size_activities_title"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="@dimen/thickness_lines"
+            android:layout_height="match_parent"
+            android:background="@color/yellowLines" />
+
+        <View
+            android:layout_width="@dimen/thickness_lines"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margines_between_lines"
+            android:background="@color/yellowLines" />
 
         <TextView
             android:id="@+id/search"
