--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,19 +5,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="@dimen/margines_main"
+    android:paddingTop="@dimen/margines_between_songs"
     android:paddingLeft="@dimen/margines_main">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+    <ImageView
+        android:id="@+id/band_singer_image_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:src="@drawable/piersi_small" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="6"
+        android:orientation="vertical"
+        android:layout_marginLeft="@dimen/margines_main">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/title_text_view"
-        tools:text="title"/>
+        tools:text="title"
+        android:textSize="@dimen/text_size_songs_title"
+        android:textStyle="bold"
+        android:textColor="@color/redText"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/band_singer_text_view"
-        tools:text="band/singer"/>
+        tools:text="band/singer"
+        android:textColor="@color/redText"/>
+    </LinearLayout>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/thickness_lines"
+        android:background="@color/yellowLines" />
+
 
 </LinearLayout>
