--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margines_main">16dp</dimen>
+    <dimen name="margines_between_songs">2dp</dimen>
+    <dimen name="margines_between_lines">4dp</dimen>
+
+    <dimen name="text_size_songs_title">18sp</dimen>
+    <dimen name="text_size_activities_title">20sp</dimen>
+
+    <dimen name="thickness_lines">1dp</dimen>
 
 </resources>
