--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -45,6 +45,12 @@
         android:textColor="@color/redText"/>
     </LinearLayout>
 
+        <CheckBox
+            android:id="@+id/favorite_checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+            <!--android:button="drawable/checkbox"/>-->
+
     </LinearLayout>
 
     <View
