--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,6 +128,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
+            android:onClick="goToBandSingerActivity"
             android:text="@string/music_bands_singers"
             android:textColor="@color/redText"
             android:textSize="@dimen/text_size_activities_title"
