--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -145,13 +145,13 @@
             android:layout_marginLeft="@dimen/margines_between_lines"
             android:background="@color/yellowLines" />
 
-        <TextView
+        <EditText
             android:id="@+id/search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:text="UUUUUUUUU"
+            android:hint="search a song here"
             android:textColor="@color/yellowLines" />
 
     </LinearLayout>
