--- a/app/src/main/res/layout/band_singer_item.xml
+++ b/app/src/main/res/layout/band_singer_item.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:onClick="goToBandActivity"
-    android:paddingTop="@dimen/margines_between_songs"
-    android:paddingLeft="@dimen/margines_main">
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/margines_main"
+    android:paddingTop="@dimen/margines_between_songs">
 
-        <ImageView
-            android:id="@+id/band_singer_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/piersi_small" />
+    <ImageView
+        android:id="@+id/band_singer_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/piersi_small" />
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/band_singer_text_view"
-                tools:text="band/singer"
-                android:textSize="@dimen/text_size_activities_title"
-                android:textColor="@color/redText"/>
+    <TextView
+        android:id="@+id/band_singer_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/orangeText"
+        android:textSize="@dimen/text_size_activities_title"
+        tools:text="band/singer" />
 
 
 </LinearLayout>
