--- a/app/src/main/res/layout/list_item_song_in_band.xml
+++ b/app/src/main/res/layout/list_item_song_in_band.xml
@@ -12,13 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:onClick="goToSingleSongActivity">
 
         <ImageView
             android:id="@+id/band_singer_image_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="@dimen/image_size_height"
+            android:layout_weight="2.5"
             android:src="@drawable/piersi_small"
             android:layout_marginRight="@dimen/margines_main"/>
 
@@ -27,24 +28,24 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:id="@+id/title_text_view"
-                tools:text="title"
+                android:textColor="@color/orangeText"
                 android:textSize="@dimen/text_size_songs_title"
                 android:textStyle="bold"
-                android:textColor="@color/redText"/>
+                tools:text="title" />
 
 
         <CheckBox
             android:id="@+id/favorite_checkBox"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <!--android:button="drawable/checkbox"/>-->
+            android:layout_height="wrap_content"
+            android:button="@drawable/favorite_checkbox"/>
 
     </LinearLayout>
 
     <View
         android:layout_width="wrap_content"
         android:layout_height="@dimen/thickness_lines"
-        android:background="@color/yellowLines" />
+        android:background="@color/redLines" />
 
 
 </LinearLayout>
