--- a/app/src/main/res/layout/songs_list.xml
+++ b/app/src/main/res/layout/songs_list.xml
@@ -4,9 +4,9 @@
     android:id="@+id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:orientation="vertical"
     android:paddingBottom="@dimen/margines_main"
     android:paddingLeft="@dimen/margines_main"
     android:paddingRight="@dimen/margines_main"
-    android:paddingTop="@dimen/margines_main"
-    android:background="@color/background"/>
+    android:paddingTop="@dimen/margines_main" />
