--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -161,12 +161,15 @@
                 android:inputType="text"
                 android:textColorHint="@color/orangeText"
                 android:textSize="@dimen/text_size_activities_title"
-                android:textStyle="italic" />
+                android:textStyle="italic"
+                android:textColor="@color/orangeText"/>
 
-            <ImageView
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_search_red_24dp" />
+                android:background="@color/background"
+                android:drawableTop="@drawable/ic_search_red_24dp"
+                android:onClick="findSong"/>
         </LinearLayout>
 
     </LinearLayout>
