Add bigger pictures to bands and singers

--- a/app/src/main/res/layout/song_on_list_item.xml
+++ b/app/src/main/res/layout/song_on_list_item.xml
@@ -21,7 +21,7 @@
             android:layout_height="@dimen/image_size_height"
             android:layout_weight="2.5"
             android:onClick="goToSingleSongActivity"
-            android:src="@drawable/piersi" />
+            android:src="@drawable/piersi_small" />
 
         <LinearLayout
             android:layout_width="0dp"
