--- a/app/src/main/res/layout/band_singer_item.xml
+++ b/app/src/main/res/layout/band_singer_item.xml
@@ -5,22 +5,27 @@
     android:layout_height="match_parent"
     android:onClick="goToBandActivity"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/margines_main"
-    android:paddingTop="@dimen/margines_between_songs">
+    android:paddingTop="@dimen/margines_between_songs"
+    android:paddingBottom="@dimen/margines_bottom_single_song">
 
+    <!--Image for band/singer-->
     <ImageView
         android:id="@+id/band_singer_image_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/piersi_small" />
+        android:layout_height="170dp"
+        android:src="@drawable/piersi_small"
+        android:layout_marginBottom="@dimen/margines_between_lines"/>
 
-
+    <!--Name of band/singer placed below of image-->
     <TextView
         android:id="@+id/band_singer_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:textColor="@color/orangeText"
         android:textSize="@dimen/text_size_activities_title"
+        android:textAllCaps="true"
+        android:textAlignment="center"
         tools:text="band/singer" />
 
 
