--- a/app/src/main/res/layout/song_on_list_item.xml
+++ b/app/src/main/res/layout/song_on_list_item.xml
@@ -7,7 +7,6 @@
     android:paddingLeft="@dimen/margines_main"
     android:paddingRight="@dimen/margines_main"
     android:paddingTop="@dimen/margines_between_songs">
-    <!--   android:onClick="goToSingleSongActivity" -->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,6 +14,7 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <!--Image for band/singer in the left site-->
         <ImageView
             android:id="@+id/band_singer_image_view"
             android:layout_width="0dp"
@@ -30,6 +30,7 @@
             android:layout_weight="6"
             android:orientation="vertical">
 
+            <!--TextView for title of song in the right site of band's image-->
             <TextView
                 android:id="@+id/title_text_view"
                 android:layout_width="wrap_content"
@@ -40,6 +41,7 @@
                 android:textStyle="bold"
                 tools:text="title" />
 
+            <!--TextView for band/singer name below of song's title-->
             <TextView
                 android:id="@+id/band_singer_text_view"
                 android:layout_width="wrap_content"
@@ -49,6 +51,7 @@
                 tools:text="band/singer" />
         </LinearLayout>
 
+        <!--CheckBox for check if the song is favorite-->
         <CheckBox
             android:id="@+id/favorite_checkBox"
             android:layout_width="wrap_content"
@@ -60,7 +63,9 @@
     <View
         android:layout_width="wrap_content"
         android:layout_height="@dimen/thickness_lines"
-        android:background="@color/redLines" />
+        android:background="@color/redLines"
+        android:layout_marginTop="@dimen/margines_upon_line"
+        android:layout_marginBottom="@dimen/margines_below_line"/>
 
 
 </LinearLayout>
