--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,7 +3,10 @@
     <dimen name="margines_main">16dp</dimen>
     <dimen name="margines_between_songs">2dp</dimen>
     <dimen name="margines_between_lines">4dp</dimen>
+    <dimen name="margines_upon_line">4dp</dimen>
+    <dimen name="margines_below_line">8dp</dimen>
     <dimen name="margines_bottom_single_song">70dp</dimen>
+    <dimen name="margines_bottom_single_band">30dp</dimen>
 
     <dimen name="text_size_activities_title">20sp</dimen>
     <dimen name="text_size_songs_title">16sp</dimen>
