--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -160,7 +160,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:hint="@string/serach_song"
+                android:hint="@string/search_song"
                 android:inputType="text"
                 android:textColor="@color/orangeText"
                 android:textColorHint="@color/orangeText"
