--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
-        android:src="@drawable/main_picture" />
+        android:src="@drawable/main_picture"
+        android:contentDescription="@null"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -156,7 +157,7 @@
 
             <!--EditText for searching songs after titles-->
             <EditText
-                android:id="@+id/search"
+                android:id="@+id/search_editText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -169,12 +170,13 @@
                 android:layout_marginLeft="@dimen/margines_main"/>
 
             <Button
+                android:id="@+id/search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/background"
                 android:drawableTop="@drawable/ic_search_red_24dp"
-                android:onClick="findSong"
-                android:layout_marginRight="@dimen/margines_main"/>
+                android:layout_marginRight="@dimen/margines_main"
+                android:contentDescription="@string/search_song"/>
         </LinearLayout>
 
     </LinearLayout>
